--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=study-springboot
 springdoc.swagger-ui.path=/swagger-ui.html
-debug=true
+management.endpoints.web.exposure.include=*
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.initialization-mode=always
+
+spring.jpa.defer-datasource-initialization=true
 
 
